# NutriChatBot

./: .env  README.md  app.py  embeddings.py  nutrition.db  pyproject.toml  requirements.txt
.streamlit/: config.toml  requirements.txt
chroma/: chroma.sqlite3
chroma/1ccc021c-0f81-4326-ad51-373698499696/: index_metadata.pickle
chroma/75ca53df-58ff-4dc6-b46c-988fde80e917/: index_metadata.pickle
nutrichatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
