# pyproject.toml

[project]
name = "nutrichatbot"
version = "0.1.0"
description = "Chatbot Asisten Gizi & Resep Sehat dengan RAG"
dependencies = [
    "streamlit",
    "pandas",
    "google-generativeai",
    "python-dotenv",
    "chromadb",
    "pysqlite3-binary",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]

[tool.setuptools.exclude-package-dir]
# Direktori di tingkat root yang harus diabaikan oleh setuptools sebagai paket Python
"" = ["data", "chroma"]