# pyproject.toml

[project]
name = "nutrichatbot"
version = "0.1.0"
description = "Chatbot Asisten Gizi & Resep Sehat dengan RAG"
dependencies = [
    "streamlit",
    "pandas",
    "google-generativeai",
    "python-dotenv",
    "chromadb",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = ["app", "embeddings"]